Fix spacing between containers of integration

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -96,14 +96,9 @@ a {
 .integrations-svg-wrapper {
   position: relative;
   bottom: -5px;
-}
-@media (min-width: 768px) {
-  .integrations-svg-wrapper {
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin: auto;
-    bottom: -5px;
+  margin-top: -30px;
+  svg {
+    height: auto;
   }
 }
 @media (min-width: 580px) {
